--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,52 @@
-<main class="main">
+<div style="height: 100%">
+  <header>
+    <mat-toolbar>
+      <button #sidenavToggleButton class="sidenav-toggle-button" matIconButton
+              (click)="onSidenavToggleButtonClick($event)">
+        @if (!sidenav?.opened) {
+          <mat-icon>menu</mat-icon>
+        } @else {
+          <mat-icon>close</mat-icon>
+        }
+      </button>
+      <span>Irrlicht</span>
+      <span class="toolbar-spacer"></span>
+      <theme-toggle/>
+    </mat-toolbar>
+  </header>
+
+  <mat-drawer-container class="drawer-container">
+    <mat-drawer #sidenav class="drawer" mode="over">
+      <mat-list>
+        <mat-list-item>
+          <button matButton [routerLink]="['']">
+            <mat-icon>home</mat-icon>
+            Home
+          </button>
+        </mat-list-item>
+        <mat-list-item>
+          <button matButton [matMenuTriggerFor]="projectMenu">
+            <mat-icon iconPositionEnd>arrow_drop_down</mat-icon>
+            Projects
+          </button>
+          <mat-menu #projectMenu>
+            <button mat-menu-item [routerLink]="['projects']"><b>Overview</b></button>
+            <button mat-menu-item [routerLink]="['projects/0']">Project 1</button>
+            <button mat-menu-item [routerLink]="['projects/2']">Project 2</button>
+          </mat-menu>
+        </mat-list-item>
+        <mat-list-item>
+          <button matButton [routerLink]="['contact']">Contact</button>
+        </mat-list-item>
+      </mat-list>
+      <button matIconButton>
+        <mat-icon>home</mat-icon>
+      </button>
+    </mat-drawer>
+    <router-outlet/>
+  </mat-drawer-container>
+</div>
+<!--<main class="main">
   <div class="content">
     <div class="left-side">
       <svg
@@ -141,6 +189,4 @@
       </div>
     </div>
   </div>
-</main>
-
-<router-outlet/>
+</main>-->
