--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,3 +1,23 @@
+.drawer-container {
+  width: 100%;
+  height: calc(100% - 64px);
+}
+
+main {
+  height: 100%;
+}
+
+.toolbar-spacer {
+  flex: 1 1 auto;
+}
+
+.drawer {
+  padding: 20px;
+}
+
+
+//base stuff
+/*
 :host {
   --bright-blue: oklch(51.01% 0.274 263.83);
   --electric-violet: oklch(53.18% 0.28 296.97);
@@ -170,4 +190,4 @@ main {
     background: var(--red-to-pink-to-purple-horizontal-gradient);
     margin-block: 1.5rem;
   }
-}
+}*/
