--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,56 @@
-@import "@angular/material/prebuilt-themes/cyan-orange.css";
+@use '@angular/material' as mat;
+@use 'common/animations.scss';
 
-html, body {
+html {
   height: 100%;
+  color-scheme: light dark;
 }
 
 body {
+  height: 100%;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  @include mat.theme((
+    //color: (
+    //  theme-type: light,
+    //  primary: mat.$azure-palette,
+    //  tertiary: mat.$blue-palette,
+    //),
+    color: mat.$cyan-palette,
+    typography: Roboto,
+    density: 0,
+  ));
+
+  @include mat.toolbar-overrides((
+    container-background-color: var(--mat-sys-secondary),
+  ))
+}
+
+header {
+  background-color: var(--mat-sys-secondary);
+}
+
+body.theme-dark {
+  color-scheme: dark;
+}
+
+body.theme-light {
+  color-scheme: light;
+}
+
+.gradient-border {
+  $border: 5px;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -$border;
+    border-radius: inherit;
+    background: linear-gradient(to right, var(--mat-sys-primary), var(--mat-sys-neutral-variant20));
+  }
 }
