--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,15 +1,24 @@
 <div style="height: 100%">
   <header>
     <mat-toolbar>
-      <button #sidenavToggleButton class="sidenav-toggle-button" matIconButton
-              (click)="onSidenavToggleButtonClick()">
+      <button
+        #sidenavToggleButton
+        class="sidenav-toggle-button" matIconButton
+        (click)="onSidenavToggleButtonClick()"
+      >
         @if (!sidenav?.opened) {
           <mat-icon>menu</mat-icon>
         } @else {
           <mat-icon>close</mat-icon>
         }
       </button>
-      <span>Irrlicht</span>
+      <span
+        id="siteName"
+        (pointerenter)="onSiteNamePointerEnter()"
+        (click)="onSiteNameClick()"
+      >
+        Irrlicht
+      </span>
       <span class="toolbar-spacer"></span>
       <theme-toggle/>
     </mat-toolbar>
