general: - added styling overrides for sidenav - added basic layout for projects - added basic support for project summaries - added basic support for dynamic projects by adding projectInfo.json files for each project in irrlicht/public/projectFiles/"projectName" - added two test projects in irrlicht/public/projectFiles
app:
- added border to the right of the sidenav/drawer to better visualize where the sidenav ends and the main content starts

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,12 @@ body {
 
   @include mat.toolbar-overrides((
     container-background-color: var(--mat-sys-secondary),
-  ))
+  ));
+
+  @include mat.sidenav-overrides((
+    container-shape: 0%,
+    container-width: 180px,
+  ));
 }
 
 header {
