styles: - added support for custom global variables - updated gradient-border to work better out of the box - also added support for custom static variables in the "customVariables.scss" file to use in @media queries etc.
app:
- added a wrapper around the router to have a general padding around the main content

angular.json:
- disabled automatic generation of .spec files
- changed filetype of automatically generated styles from css to scss

project-summary-base:
- changed styles filetype from css to scss
- temporarily changed height of mat-card

project:
- added and moved properties
- integrated first properties for real image support
- added simple comments to make the properties usages more obvious
- also added more test projects to see how to handle the new properties

project-service:
- added automatic population of the image properties on the projects

card-selector:
- created new component to work as a mix between a button and a card -> basically a button with more content

projects:
- integrated the new card-selector component to test its behaviour

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -50,7 +50,9 @@
       </mat-list>
       <sidenav-mode-toggle [sidenav]="sidenav"/>
     </mat-drawer>
-    <router-outlet/>
+    <main>
+      <router-outlet/>
+    </main>
   </mat-drawer-container>
 </div>
 <!--<main class="main">
