--- a/src/components/card-selector/card-selector.html
+++ b/src/components/card-selector/card-selector.html
@@ -1,13 +1,14 @@
-<div>
-  <mat-card [ngStyle]="customBackgroundStyles">
-    <mat-card-header>
-      {{ title }}
-    </mat-card-header>
-    <mat-card-content>
-      <p>{{ subtitle }}</p>
-      <button matIconButton (click)="onClick($event)">
-        <mat-icon>chevron_right</mat-icon>
-      </button>
-    </mat-card-content>
-  </mat-card>
-</div>
+<mat-card
+  [style.background-image]="'url(' + imageUrl + ')'"
+  [ngClass]="{ 'holoCard': !disableHoloCardEffect }"
+  (click)="onClick($event)"
+>
+  <mat-card-header>
+    {{ title }}
+  </mat-card-header>
+  <mat-card-content>
+    <p>{{ subtitle }}</p>
+    <mat-icon>chevron_right</mat-icon>
+  </mat-card-content>
+</mat-card>
+
