--- a/src/components/card-selector/card-selector.html
+++ b/src/components/card-selector/card-selector.html
@@ -7,7 +7,7 @@
     {{ title }}
   </mat-card-header>
   <mat-card-content>
-    <p>{{ subtitle }}</p>
+    {{ subtitle }}
     <mat-icon>chevron_right</mat-icon>
   </mat-card-content>
 </mat-card>
