[projects-site] (slight detour in this commit to try out some stuff in the home component)
home:
- added test element that shows a light around the cursor while on that element
- handled edge cases to keep the light always exactly on the cursor (handled scrolling and sidenav changes)

app:
- updated how the buttons for specific projects work. They are now dynamically generated and create links with the projectName instead of the index -> increases url readability

sidenav-mode-toggle:
- changed css to scss to use sass variables
- added functionality to automatically update global css variables when the sidenav changes

styles:
- added global variables for the sidenav that update when its status changes (update is done in sidenav-mode-toggle
- added overrides for mat-toolbar to have specific control over its dynamic height

customVariables:
- added variables for toolbar and sidenav and replaced hardcoded values in other files with them

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -40,8 +40,9 @@
           </button>
           <mat-menu #projectMenu>
             <button mat-menu-item [routerLink]="['projects']"><b>Overview</b></button>
-            <button mat-menu-item [routerLink]="['projects/0']">Project 1</button>
-            <button mat-menu-item [routerLink]="['projects/2']">Project 2</button>
+            @for (projectName of projectNames; track projectName) {
+              <button mat-menu-item [routerLink]="[`projects/${projectName}`]">{{ projectName }}</button>
+            }
           </mat-menu>
         </mat-list-item>
         <mat-list-item>
