--- a/src/pages/projects/projects.scss
+++ b/src/pages/projects/projects.scss
@@ -1,6 +1,6 @@
 .tab-selector {
   height: 15px;
-  width: 15px;
+  aspect-ratio: 1;
   background-color: var(--mat-sys-primary);
   border-radius: 50%;
   display: inline-block;
