--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,10 +2,10 @@
 
 .drawer-container {
   width: 100%;
-  height: calc(100dvh - 64px);
+  height: calc(100dvh - #{customVariables.$desktop-toolbar-height});
 
   @media only screen and (max-width: customVariables.$mobile-max-width) {
-    height: calc(100dvh - 56px);
+    height: calc(100dvh - #{customVariables.$mobile-toolbar-height});
   }
 }
 
@@ -29,6 +29,7 @@ main {
 }
 
 .drawer {
+  width: customVariables.$sidenav-width;
   padding: 20px;
   border-right: 1px solid var(--mat-sys-primary);
 }
