[projects-site] (slight detour in this commit to try out some stuff in the home component)
general:
- moved most of the project files into the app folder to follow frontend project layout standards

home:
- moved styling for "main" element into new p-container stylesheet
- removed "main" element from home component as the content-surrounding whitespace padding will now be set by the pages themselves to enable more customizability

styles:
- imported new customStyle "p-container" to make it globally available (all future files in the "customStyles" folder should be imported like this from now on)

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,4 +1,4 @@
-@use '../../customVariables';
+@use '../../../customVariables';
 
 #cursorLight {
   background: radial-gradient(
@@ -31,6 +31,6 @@
 }
 
 .mission-container {
-  background: black;
+  background: white;
   height: 200vh;
 }
