[projects-site] (slight detour in this commit to try out some stuff in the home component)
general:
- created cursor-light-overlay component
- removed unneeded comment from sidenav-mode-toggle
- added todos as reminders to also create different version of the overlays for mobile
- added icons to sidenav items

home:
- moved cursor-light code into its new component "cursor-light-overlay"
- added new interactable container pixels-overlay

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -35,8 +35,9 @@
         </mat-list-item>
         <mat-list-item>
           <button matButton [matMenuTriggerFor]="projectMenu">
-            <mat-icon iconPositionEnd>arrow_drop_down</mat-icon>
+            <mat-icon>flag</mat-icon>
             Projects
+            <mat-icon iconPositionEnd>arrow_drop_down</mat-icon>
           </button>
           <mat-menu #projectMenu>
             <button mat-menu-item [routerLink]="['projects']"><b>Overview</b></button>
@@ -46,7 +47,10 @@
           </mat-menu>
         </mat-list-item>
         <mat-list-item>
-          <button matButton [routerLink]="['contact']">Contact</button>
+          <button matButton [routerLink]="['contact']">
+            <mat-icon>chat</mat-icon>
+            Contact
+          </button>
         </mat-list-item>
       </mat-list>
       <sidenav-mode-toggle [sidenav]="sidenav"/>
