[projects-site] (slight detour in this commit to try out some stuff in the home component)
home:
- added interval to randomly set the hover state on the pixels
- changed namings on the individual pixel elements
- added animations to mission-container-pixels
- made text display over the pixels-overlay-container and fixed pointer-event issue
- made overlay and text the same size

animations:
- added popIn and popIn-less for a simple scaling animation

app:
- made cursor to pointer and added link to "home" on the "siteName" span

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -16,6 +16,7 @@
         id="siteName"
         (pointerenter)="onSiteNamePointerEnter()"
         (click)="onSiteNameClick()"
+        [routerLink]="['']"
       >
         Irrlicht
       </span>
