--- a/src/app/common/animations.scss
+++ b/src/app/common/animations.scss
@@ -42,3 +42,37 @@
   animation-name: wobble;
   animation-duration: 0.75s;
 }
+
+@keyframes popIn {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.animation__popIn {
+  animation-name: popIn;
+  animation-duration: 0.75s;
+}
+
+@keyframes popIn-less {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.animation__popIn-less {
+  animation-name: popIn;
+  animation-duration: 0.75s;
+}
