[projects-site] (slight detour in this commit to try out some stuff in the home component)
home:
- moved pixels-overlay into its own component
- added more contentPane elements to check how they look with multiple elements on the same page
- changed up class/id naming to align more with the bem pattern

observe-visibility-directive:
- added to be able to play animations when elements come into view.

animations:
- added new animation "fadeIn-up" meant for text to show up when it's coming into view

styles:
- added new font "Jersey 15" currently only used in the title

--- a/src/app/common/animations.scss
+++ b/src/app/common/animations.scss
@@ -76,3 +76,28 @@
   animation-name: popIn;
   animation-duration: 0.75s;
 }
+
+@keyframes fadeIn-up {
+  0% {
+    opacity: 0;
+    transform: translateY(80%);
+  }
+  20% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+.animation__fadeIn-up {
+  animation-name: fadeIn-up;
+  animation-duration: 0.75s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
