--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ html {
 body {
   height: 100%;
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Jersey 15", sans-serif;
   @include mat.theme((
     //color: (
     //  theme-type: light,
