[projects-site] (slight detour in this commit to try out some stuff in the home component)
home:
- added functionality to load a random project to show as "Featured Project"
- used the typewriterService to add the effect to the title
- upgraded content pane to allow for a split view
- added card-selector to link to the featured project
- added more content-panes
- added morphing cube

styles:
- added custom typography styles that automatically adjust for screen size

project-service:
- upgraded getProjects() to also allow for specific projects to be requested
- made getProjects() actually async by calling the new getProjectFromFilePath() function. (getProjects() wasn't async before which led to issues when calling it)

typewriter.service:
- added to get a typewriterEffect on displayed text in the html

observe-visibility-directive:
- adjusted threshold and actually made it usable (wasn't correctly implemented before

animations:
- added animation for morphing cube

pixels-overlay:
- removed height adjustment for screen size as it isn't needed currently

--- a/src/app/common/animations.scss
+++ b/src/app/common/animations.scss
@@ -101,3 +101,66 @@
   animation-timing-function: ease-out;
   animation-fill-mode: forwards;
 }
+
+@keyframes morph-rotating {
+  0% {
+    rotate: 0deg;
+    border-radius: 0;
+  }
+  50% {
+    border-radius: 50%;
+  }
+  100% {
+    rotate: 360deg;
+  }
+}
+
+.animation__morph-rotating {
+  animation-name: morph-rotating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes jump {
+  0% {
+    transform: translateY(0%);
+  }
+  10% {
+    transform: translateY(-20%);
+  }
+  20% {
+    transform: translateY(-30%);
+  }
+  30% {
+    transform: translateY(-36%);
+  }
+  40% {
+    transform: translateY(-39%);
+  }
+  50% {
+    transform: translateY(-40%);
+  }
+  60% {
+    transform: translateY(-39%);
+  }
+  70% {
+    transform: translateY(-36%);
+  }
+  80% {
+    transform: translateY(-30%);
+  }
+  90% {
+    transform: translateY(-20%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+.animation__jump {
+  animation-name: jump;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
