--- a/src/customStyles/p-container.scss
+++ b/src/customStyles/p-container.scss
@@ -4,7 +4,7 @@
   margin-block: 30px;
   margin-inline: 20dvw;
   @media only screen and (max-width: customVariables.$mobile-max-width) {
-    margin-inline: 5vw;
+    margin-inline: 5dvw;
   }
   @media only screen and (min-width: customVariables.$desktop-min-width) and (max-width: customVariables.$desktop-max-width) {
     margin-inline: 20dvw;
