--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,49 @@
   --sidenav-mode: ""; //string of the current MatDrawerMode that the sidenav is in
   --sidenav-width: #{customVariables.$sidenav-width};
   --sidenav-open-width: 0px; //set to the same value as --sidenav-width but only when sidenav is open
+
+  //typography definitions
+  --typography-title-weight: 400;
+  --typography-title-size-large: 8rem;
+  --typography-title-size-medium: 6rem;
+  --typography-title-size-small: 4rem;
+  --typography-title-line-height: 8rem;
+  --typography-title-style: "Jersey 15";
+
+  --typography-header-weight: 400;
+  --typography-header-size-large: 3.125rem;
+  --typography-header-size-medium: 2.75rem;
+  --typography-header-style: Roboto;
+  --typography-header-style-accent: "Jersey 15";
+
+  --typography-body-weight: 400;
+  --typography-body-size: 1.5rem;
+  --typography-body-style: Roboto;
+
+  @media only screen and (max-width: customVariables.$mobile-max-width) {
+    --typography-title-size-large: 6.875rem;
+    --typography-title-size-medium: 5rem;
+
+    --typography-header-size-large: 2.5rem;
+    --typography-header-size-medium: 2.125rem;
+
+    --typography-body-size: 1rem;
+  }
+
+
+  //typography fonts
+  --typography-title-font-large: var(--typography-title-weight) var(--typography-title-size-large) / var(--typography-title-line-height) var(--typography-title-style);
+  --typography-title-font-medium: var(--typography-title-weight) var(--typography-title-size-medium) var(--typography-title-style);
+
+
+  --typography-header-font-large: var(--typography-header-weight) var(--typography-header-size-large) var(--typography-body-style);
+  --typography-header-font-large-accent: var(--typography-header-weight) calc(var(--typography-header-size-large) + 10px) var(--typography-header-style-accent);
+
+  --typography-header-font-medium: var(--typography-header-weight) var(--typography-header-size-medium) var(--typography-body-style);
+  --typography-header-font-medium-accent: var(--typography-header-weight) calc(var(--typography-medium-size-large) + 10px) var(--typography-header-style-accent);
+
+
+  --typography-body-font: var(--typography-body-weight) var(--typography-body-size) var(--typography-body-style);
 }
 
 html {
@@ -29,7 +72,10 @@ body {
     //  tertiary: mat.$blue-palette,
     //),
     color: mat.$cyan-palette,
-    typography: Roboto,
+    typography: (
+      plain-family: Roboto,
+      brand-family: "Jersey 15",
+    ),
     density: 0,
   ));
 
